--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -17,10 +17,10 @@
             </div>
             <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
             <div>
-                <p><a ng-href="{{selectedprofile.securityLink}}" target="blank">{{selectedprofile.securityLink}}</a></p>
-                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securityLink.length == 0">Share with a link</button>
-                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securityLink.length > 0">Create new share link</button>
-                <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securityLink.length > 0">Delete share link</button>
+                <p><a ng-href="./{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
+                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
+                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
+                <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
             </div>
             <div>
                 <label for="txtFriendEmail">Allow a friend to see your diary</label>
