--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
         </div>
     </footer>
     @Scripts.Render("~/bundles/jslibs")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/raphael")
     @Scripts.Render("~/bundles/morris")
     @Scripts.Render("~/bundles/bootstrap")
