--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,8 +1,8 @@
-﻿<script type="text/javascript">
+﻿<!--<script type="text/javascript">
     $(document).ready(function () {
         $('#logdatetime').datetimepicker();
     });
-</script>
+</script>-->
 
 <div>
     <fieldset class="valueouterlist">
@@ -10,7 +10,7 @@
         <div class="left">
             <input type="text" data-ng-model="item.value" placeholder="Type a numeric value" />
             <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
-            <input type="text" data-ng-model="item.logdatetime" id="logdatetime" placeholder="Select a date and time" />
+            <input type="text" data-ng-model="item.logdatetime" id="dateTimepicker" placeholder="Select a date and time" dateTimepicker />
             <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
             <button id="Button1" name="btnSubmit" ng-click="addValue()" class="btn btn-primary">Submit</button>
         </div>
