fixing validation (wip)

--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -4,15 +4,27 @@
     });
 </script>-->
 
+<style type="text/css">
+      .css-form input.ng-invalid.ng-dirty {
+        background-color: #FA787E;
+      }
+    
+      .css-form input.ng-valid.ng-dirty {
+        background-color: #78FA89;
+      }
+    </style>
+
 <div>
     <fieldset class="valueouterlist">
         <legend>Profile: {{selectedprofile.name}}</legend>
         <div class="left">
-            <input type="text" data-ng-model="item.value" placeholder="Type a numeric value" />
-            <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
-            <input type="text" ng-model="item.logDate" placeholder="Select a date and time" />
-            <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
-            <button id="Button1" name="btnSubmit" ng-click="addValue()" class="btn btn-primary">Submit</button>
+            <form name="logForm" class="css-form">
+                <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" />
+                <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
+                <input type="text" ng-model="item.logDate" placeholder="Select a date and time" />
+                <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
+                <button id="Button1" name="btnSubmit" ng-click="addValue()" class="btn btn-primary">Submit</button>
+            </form>
         </div>
         <article id="Article">
             <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
