--- a/MySelf.WebClient/Views/Diary/Index.cshtml
+++ b/MySelf.WebClient/Views/Diary/Index.cshtml
@@ -2,8 +2,8 @@
 <div data-ng-app="friendlogApp">
     <span ng-show="loading">loading</span>
     <input type="hidden" id="link" ng-model="link" value="@Model.Link" />
-    <h2>Shared diary view</h2>
     <div ng-controller="FriendController">
+        <h2>Diary view {{getPrintDate()}}</h2>
         <article id="content">
             <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
         </article>
@@ -11,7 +11,7 @@
             <fieldset ng-show="logprofilesasfriend.length > 0" ng-repeat="logprofile in logprofilesasfriend | orderBy:name" class="valueouterlist">
                 <legend>Profile: {{logprofile.name}}</legend>
                 <div class="valueinnerlist" ng-repeat="log in logprofile.logs | orderBy:LogDate:reverse">
-                    {{log.value}} - {{log.logdate}}
+                    <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
                 </div>
             </fieldset>
         </aside>
