--- a/MySelf.WebClient/Views/Diary/Day.cshtml
+++ b/MySelf.WebClient/Views/Diary/Day.cshtml
@@ -3,18 +3,28 @@
     <span ng-show="loading">loading</span>
     <input type="hidden" id="link" ng-model="link" value="@Model.Link" />
     <div ng-controller="FriendController">
-        <h2>Diary view {{getCurrentDate()}}</h2>
-        <article id="content">
+        <div class="diarycommands">
+            <div class="previous">
+                <a href ng-click="previous()">previous</a>
+            </div>
+            <div class="middle">
+                <h2>Diary view {{getCurrentDate()}}</h2>
+            </div>
+            <div class="next">
+                <a href ng-click="next()">next</a>
+            </div>
+        </div>
+        <article>
             <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
         </article>
-        <aside id="diaryList">
+        @*<aside id="diaryList">
             <fieldset ng-show="logprofilesasfriend.length > 0" ng-repeat="logprofile in logprofilesasfriend | orderBy:name" class="valueouterlist">
                 <legend>Profile: {{logprofile.name}}</legend>
                 <div class="valueinnerlist" ng-repeat="log in logprofile.logs | orderBy:LogDate:reverse">
                     <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
                 </div>
             </fieldset>
-        </aside>
+        </aside>*@
     </div>
 </div>
 @section scripts {
