implemented new day view

--- a/MySelf.WebClient/Content/ngi.css
+++ b/MySelf.WebClient/Content/ngi.css
@@ -101,3 +101,17 @@ aside#toc {
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
 }
+
+.previousdate {
+    float: left;
+}
+
+.middle {
+    float: left;
+}
+
+.middle h2 {
+    margin: 0;
+    margin-left: 10px;
+    margin-right: 10px;
+} 
