--- a/MySelf.WebClient/Views/Diary/Day.cshtml
+++ b/MySelf.WebClient/Views/Diary/Day.cshtml
@@ -2,29 +2,17 @@
 <div data-ng-app="friendlogApp">
     <span ng-show="loading">loading</span>
     <input type="hidden" id="link" ng-model="link" value="@Model.Link" />
-    <div ng-controller="FriendController">
-        <div class="diarycommands">
-            <div class="previousdate">
-                <a href ng-click="previous()">previous</a>
-            </div>
-            <div class="middle">
-                <h2>Diary view {{getCurrentDate()}}</h2>
-            </div>
-            <div class="nextdate">
-                <a href ng-click="next()">next</a>
-            </div>
-        </div>
+    <div ng-controller="NewFriendController">
+        <ul class="nav nav-pills">
+            <li data-ng-repeat="report in reports" data-ng-class="(report.val == selectedreport.val && 'active')">
+                <a href data-ng-click="setReport(report.val)">{{ report.name }}</a>
+            </li>
+            <li><a href="#">Month</a></li>
+            <li><a href="#">Year</a></li>
+        </ul>
         <article>
             <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
         </article>
-        @*<aside id="diaryList">
-            <fieldset ng-show="logprofilesasfriend.length > 0" ng-repeat="logprofile in logprofilesasfriend | orderBy:name" class="valueouterlist">
-                <legend>Profile: {{logprofile.name}}</legend>
-                <div class="valueinnerlist" ng-repeat="log in logprofile.logs | orderBy:LogDate:reverse">
-                    <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
-                </div>
-            </fieldset>
-        </aside>*@
     </div>
 </div>
 @section scripts {
