--- a/MySelf.WebClient/Views/Diary/Day.cshtml
+++ b/MySelf.WebClient/Views/Diary/Day.cshtml
@@ -3,12 +3,11 @@
     <span ng-show="loading">loading</span>
     <input type="hidden" id="link" ng-model="link" value="@Model.Link" />
     <div ng-controller="NewFriendController">
+        <input type="text" ng-model="date" placeholder="Select a date and time" />
         <ul class="nav nav-pills">
-            <li data-ng-repeat="report in reports" data-ng-class="(report.val == selectedreport.val && 'active')">
-                <a href data-ng-click="setReport(report.val)">{{ report.name }}</a>
+            <li data-ng-repeat="report in reports" data-ng-class="(report.name == selectedreport.name && 'active')">
+                <a href data-ng-click="setReport(report)">{{ report.name }}</a>
             </li>
-            <li><a href="#">Month</a></li>
-            <li><a href="#">Year</a></li>
         </ul>
         <article>
             <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
