fixed the filter by day and week in the new friendcontroller; addes some css rules to format friend view; added a config value to simplify webdeploy and facebook login;

--- a/MySelf.WebClient/Content/ngi.css
+++ b/MySelf.WebClient/Content/ngi.css
@@ -110,8 +110,28 @@ aside#toc {
     float: left;
 }
 
-.middle h2 {
+    .middle h2 {
+        margin: 0;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+.titlereport {
+    
+}
+
+.titlereport h1 {
+    font-size: 2.3em;
+    font-size: 1.75em;
     margin: 0;
-    margin-left: 10px;
-    margin-right: 10px;
-} 
+    padding: 10px;
+    float: right;
+    color: #333;
+    font-family: "Segoe UI","Trebuchet MS",Verdana,Helvetica,Sans-Serif;
+    border: 1px solid grey;
+    background-color: #EEE;
+}
+
+.graphpanel {
+    width: 90%;
+}
