--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -36,7 +36,7 @@
             </div>
             <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
             <div>
-                <p><a ng-href="./{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
+                <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
                 <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
                 <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
                 <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
