added an average value into the friend controller/view

--- a/MySelf.WebClient/Views/Diary/Day.cshtml
+++ b/MySelf.WebClient/Views/Diary/Day.cshtml
@@ -31,6 +31,7 @@
         <div>
             <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
         </div>
+        <span>average {{getAverage()}}</span>
     </div>
 </div>
 @section scripts {
