--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,20 +1,4 @@
-﻿<!--<script type="text/javascript">
-    $(document).ready(function () {
-        $('#logdatetime').datetimepicker();
-    });
-</script>-->
-
-<style type="text/css">
-      .css-form input.ng-invalid.ng-dirty {
-        background-color: #FA787E;
-      }
-    
-      .css-form input.ng-valid.ng-dirty {
-        background-color: #78FA89;
-      }
-    </style>
-
-<div>
+﻿<div>
     <fieldset class="valueouterlist">
         <legend>Profile: {{selectedprofile.name}}</legend>
         <div class="left">
