wip... added a delete attribute and a config to try to solve the delete problem

--- a/MySelf.WebClient/Views/Home/Index.mobile.cshtml
+++ b/MySelf.WebClient/Views/Home/Index.mobile.cshtml
@@ -7,6 +7,7 @@
 }
 @if (@User.Identity.IsAuthenticated)
 {
+    <p>hello mobile</p>
     <div data-ng-app="myselflogApp">
         <div data-ng-view></div>
     </div>
