completed removal of friend app

--- a/MySelf.WebClient/app/views/diary.view.html
+++ b/MySelf.WebClient/app/views/diary.view.html
@@ -1,6 +1,6 @@
 ﻿<div>
     <span ng-show="loading">loading</span>
-    <input type="hidden" id="link" ng-model="link" value="@Model.Link" />
+    <input type="hidden" id="link" ng-model="link" value="{{Link}}" />
     <div class="row graphpanel">
         <div class="col-xs-6 col-sm-4 col-lg-4">
             <ul class="nav nav-pills">
