trying to implement an angular switch between mobile and desktop

--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -51,6 +51,32 @@
         @Scripts.Render("~/bundles/raphael")
         @Scripts.Render("~/bundles/morris")
         @Scripts.Render("~/bundles/bootstrap")
+        
+        <script type="text/javascript">
+            var isMobile = {
+                Android: function () {
+                    return navigator.userAgent.match(/Android/i);
+                },
+                BlackBerry: function () {
+                    return navigator.userAgent.match(/BlackBerry/i);
+                },
+                iOS: function () {
+                    return navigator.userAgent.match(/iPhone|iPad|iPod/i);
+                },
+                Opera: function () {
+                    return navigator.userAgent.match(/Opera Mini/i);
+                },
+                Windows: function () {
+                    return navigator.userAgent.match(/IEMobile/i);
+                },
+                any: function () {
+                    return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
+                }
+            };
+
+            if (isMobile.any()) alert('Mobile');
+        </script>
+
         @RenderSection("scripts", false)
     </body>
 </html>
