--- a/MySelf.WebClient/app/views/profiles.view.html
+++ b/MySelf.WebClient/app/views/profiles.view.html
@@ -1,4 +1,94 @@
-﻿<!--<hgroup class="search">
+﻿<div id="content">
+            <div id="content-inner">
+
+                <!-- Post -->
+                <article class="is-post is-post-excerpt" ng-repeat="profile in logprofilesasowner">
+                    <header>
+                        <!--
+                            Note: Titles and bylines will wrap automatically when necessary, so don't worry
+                            if they get too long. You can also remove the "byline" span entirely if you don't
+                            need a byline.
+                            -->
+                        <h2><a href="#">{{profile.name}}</a></h2>
+                        <span class="byline"></span>
+                    </header>
+                    <div class="info">
+                        <!--
+                            Note: The date should be formatted exactly as it's shown below. In particular, the
+                            "least significant" characters of the month should be encapsulated in a <span>
+                                                                                                    element to denote what gets dropped in 1200px mode (eg. the "uary" in "January").
+                                                                                                    Oh, and if you don't need a date for a particular page or post you can simply delete
+                                                                                                    the entire "date" element.
+											
+                            -->
+                        <!--<span class="date"><span class="month">Jan<span>uary</span></span> <span class="day">14</span><span class="year">, 2013</span></span>-->
+                        <!--
+                            Note: You can change the number of list items in "stats" to whatever you want.
+                            -->
+                        <ul class="stats">
+                            <!--<li><a href="#" class="link-icon24 link-icon24-1">16</a></li>
+                            <li><a href="#" class="link-icon24 link-icon24-2">32</a></li>
+                            <li><a href="#" class="link-icon24 link-icon24-3">64</a></li>
+                            <li><a href="#" class="link-icon24 link-icon24-4">128</a></li>-->
+                        </ul>
+                    </div>
+                    <!--<a href="#" class="image image-full">
+                        <img src="../../Images/n33-robot-invader.jpg" alt="" /></a>-->
+                    <p>
+                        <strong>Hello!</strong> You're looking at <a href="http://html5up.net/striped/">Striped</a>, a fully responsive HTML5 site template designed by <a href="http://n33.co/">AJ</a>
+                        for <a href="http://html5up.net/">HTML5 UP</a> It features a clean, minimalistic design, styling for all basic page elements (including blockquotes, tables and lists), a
+                        repositionable sidebar (left or right), and HTML5/CSS3 code designed for quick and easy customization (see code comments for details).
+                    </p>
+                    <p>
+                        Striped is released for free under the <a href="http://html5up.net/license/">Creative Commons Attribution license</a> so feel free to use it for personal projects
+                        or even commercial ones &ndash; just be sure to credit <a href="http://html5up.net/">HTML5 UP</a> for the design. If you like what you see here, be sure to check out
+                        <a href="http://html5up.net/">HTML5 UP</a> for more cool designs or follow me on <a href="http://twitter.com/n33co">Twitter</a> for new releases and updates.
+                    </p>
+                </article>
+
+                <!-- Post -->
+                <article class="is-post is-post-excerpt">
+                    <header>
+                        <h2><a href="#">Lorem ipsum dolor sit amet</a></h2>
+                        <span class="byline">Feugiat interdum sed commodo ipsum consequat dolor nullam metus</span>
+                    </header>
+                    <div class="info">
+                        <span class="date"><span class="month">Jan<span>uary</span></span> <span class="day">8</span><span class="year">, 2013</span></span>
+                        <ul class="stats">
+                            <li><a href="#" class="link-icon24 link-icon24-1">12</a></li>
+                            <li><a href="#" class="link-icon24 link-icon24-2">24</a></li>
+                            <li><a href="#" class="link-icon24 link-icon24-3">48</a></li>
+                            <li><a href="#" class="link-icon24 link-icon24-4">96</a></li>
+                        </ul>
+                    </div>
+                    <a href="#" class="image image-full">
+                        <img src="../../Images/fotogrph-dark-stairwell.jpg" alt="" /></a>
+                    <p>
+                        Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. 
+                        Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore. 
+                        Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. 
+                        Nunc nulla velit, fermentum quis interdum quis, convallis eu sapien. Integer sed ipsum ante.
+                    </p>
+                </article>
+
+                <!-- Pager -->
+                <div class="pager">
+                    <!--<a href="#" class="button previous">Previous Page</a>-->
+                    <div class="pages">
+                        <a href="#" class="active">1</a>
+                        <a href="#">2</a>
+                        <a href="#">3</a>
+                        <a href="#">4</a>
+                        <span>&hellip;</span>
+                        <a href="#">20</a>
+                    </div>
+                    <a href="#" class="button next">Next Page</a>
+                </div>
+
+            </div>
+        </div>
+
+<!--<hgroup class="search">
     <h1>There are {{logprofilesasowner.length}} profiles</h1>
     <h2>Displaying results</h2>
 </hgroup>-->
@@ -20,5 +110,3 @@
             </section>
         </li>
     </ol>-->
-
-ciao
