wip refactoring views, fixed the profile view

--- a/MySelf.WebClient/Views/Home/Index2.cshtml
+++ b/MySelf.WebClient/Views/Home/Index2.cshtml
@@ -1,1 +1,6 @@
-﻿<div data-ng-view></div>
+﻿@section scripts {
+    @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/myselflog")
+}
+
+<div data-ng-view></div>
