--- a/MySelf.WebClient/Views/Shared/_NewLayout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_NewLayout.cshtml
@@ -9,6 +9,7 @@
     <meta name="keywords" content="" />
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700" rel="stylesheet" />
     @Scripts.Render("~/bundles/striped")
+    @Styles.Render("~/Content/css2")
     <noscript>
         @Styles.Render("~/Content/stripedcss")
     </noscript>
