wip implementing authentication system

--- a/MySelf.WebClient/Views/Shared/_NewLayout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_NewLayout.cshtml
@@ -36,6 +36,10 @@
                     <li><a href="#">Diary</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contacts</a></li>
+                    <li>
+                        
+                        @Html.ActionLink("Log in", "Login", "Account")
+                    </li>
                 </ul>
             </nav>
             <section class="is-search">
