--- a/MySelf.WebClient/Views/Account/_ChangePasswordPartial.cshtml
+++ b/MySelf.WebClient/Views/Account/_ChangePasswordPartial.cshtml
@@ -2,7 +2,8 @@
 
 <h3>Change password</h3>
 
-@using (Html.BeginForm("Manage", "Account")) {
+@using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { id = "changePasswordForm" }))
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
