--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -4,79 +4,54 @@
     <meta charset="utf-8" />
     <title>My Diary Log</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta name="viewport" content="width=device-width" />
-    @Styles.Render("~/Content/css")
-    @Styles.Render("~/Content/bootstrap/base")
-    @Styles.Render("~/Content/bootstrap/theme")
-    @Styles.Render("~/Content/morriscss")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700|Open+Sans+Condensed:300,700" rel="stylesheet" />
+    @Scripts.Render("~/bundles/striped")
+    @Styles.Render("~/Content/css2")
+    <style>
+        #registerPanel {
+            display: none;
+        }
+    </style>
+    <noscript>
+        @Styles.Render("~/Content/stripedcss")
+    </noscript>
     <script type="text/javascript">
         if (window.location.hash == '#_=_') {
             window.location.hash = '';
         }
     </script>
 </head>
-    <body>
-        <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("My diary log", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </header>
-        <div id="body">
-            <div id="content">
-                <section class="content-wrapper main-content clear-fix">
-                    @RenderBody()
-                </section>
+<body class="left-sidebar" data-ng-app="myselflogApp">
+    <div id="wrapper">
+        <div id="content">
+            <div id="content-inner">
+                @RenderBody()
             </div>
         </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                </div>
+        <div id="sidebar">
+            <div id="logo">
+                <h1>mySelfLog</h1>
             </div>
-        </footer>
-        @Scripts.Render("~/bundles/jslibs")
-        @Scripts.Render("~/bundles/jqueryui")
-        @Scripts.Render("~/bundles/raphael")
-        @Scripts.Render("~/bundles/morris")
-        @Scripts.Render("~/bundles/bootstrap")
-        
-        <script type="text/javascript">
-            var isMobile = {
-                Android: function () {
-                    return navigator.userAgent.match(/Android/i);
-                },
-                BlackBerry: function () {
-                    return navigator.userAgent.match(/BlackBerry/i);
-                },
-                iOS: function () {
-                    return navigator.userAgent.match(/iPhone|iPad|iPod/i);
-                },
-                Opera: function () {
-                    return navigator.userAgent.match(/Opera Mini/i);
-                },
-                Windows: function () {
-                    return navigator.userAgent.match(/IEMobile/i);
-                },
-                any: function () {
-                    return (isMobile.Android() || isMobile.BlackBerry() || isMobile.iOS() || isMobile.Opera() || isMobile.Windows());
-                }
-            };
-
-            if (isMobile.any()) alert('Mobile');
-        </script>
-
-        @RenderSection("scripts", false)
-    </body>
+            <div id="userSettings">
+                @Html.Partial("_UserSettings")
+            </div>
+            <nav id="nav">
+                <ul>
+                    <li class="current_page_item"><a href="#">Log value</a></li>
+                    <li><a href="#">Diary</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    @Scripts.Render("~/bundles/jqueryui")
+    @Scripts.Render("~/bundles/raphael")
+    @Scripts.Render("~/bundles/morris")
+    @Scripts.Render("~/bundles/ajaxlogin")
+    @RenderSection("scripts", false)
+</body>
 </html>
