working around diary view trying to fix it without success

--- a/MySelf.WebClient/Views/Shared/_Layout.cshtml
+++ b/MySelf.WebClient/Views/Shared/_Layout.cshtml
@@ -48,6 +48,7 @@
             </nav>
         </div>
     </div>
+    @Scripts.Render("~/bundles/jslibs")
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/raphael")
     @Scripts.Render("~/bundles/morris")
