--- a/MySelf.WebClient/app/views/profile.view.html
+++ b/MySelf.WebClient/app/views/profile.view.html
@@ -1,35 +1,30 @@
-﻿<div>
-    <fieldset class="valueouterlist">
-        <legend>Profile: {{selectedprofile.name}}</legend>
-        <div class="left">
-            <form name="logForm" class="css-form">
-                <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" />
-                <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
-                <input type="text" ng-model="item.logDate" placeholder="Select a date and time" />
-                <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
-                <button id="Button1" name="btnSubmit" ng-click="addValue()" class="btn btn-primary">Submit</button>
-            </form>
-        </div>
-        <article id="Article">
-            <div id="diaryGraph" style="width: 98%; height: 400px; float: left; margin-right: 5px"></div>
-        </article>
-        <aside id="Aside">
-            <div class="valueinnerlist" ng-repeat="log in selectedprofile.logs | orderBy:LogDate:reverse">
-                <button ng-click="remove(log)" class="btn btn-warning">X</button>
-                <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
-            </div>
-            <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
-            <div>
-                <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
-                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
-                <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
-                <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
-            </div>
-            <div>
-                <label for="txtFriendEmail">Allow a friend to see your diary</label>
-                <input type="text" ng-model="friendEmail" name="txtFriendEmail" id="Text1" />
-                <button class="btn btn-default" ng-click="addFriend(friendEmail, selectedprofile.globalid)">Add friend</button>
-            </div>
-        </aside>
-    </fieldset>
-</div>
+﻿<article class="is-post is-post-excerpt">
+    <header>
+        <h2>{{selectedprofile.name}}</h2>
+    </header>
+    <form name="logForm" class="css-form">
+        <input type="number" min="1" max="800" name="value" required data-ng-model="item.value" placeholder="Type a numeric value" />
+        <textarea data-ng-model="item.message" placeholder="Type a message (optional)"></textarea>
+        <input type="text" ng-model="item.logDate" placeholder="Select a date and time" />
+        <input type="hidden" data-ng-model="item.selectedProfileId" value="selectedprofile.globalid" />
+        <button id="Button1" name="btnSubmit" ng-click="addValue()" class="btn btn-primary">Submit</button>
+    </form>
+    <div id="diaryGraph"></div>
+    <div class="valueinnerlist" ng-repeat="log in selectedprofile.logs | orderBy:LogDate:reverse">
+        <button ng-click="remove(log)" class="btn btn-warning">X</button>
+        <a href ng-click="setReport(log.logdate, 'day')">{{log.value}} - {{log.logdate}}</a>
+    </div>
+    <p ng-show="selectedprofile.logs == 0">There are not any logged values</p>
+    <div>
+        <p><a ng-href="../{{selectedprofile.securitylink}}" target="blank">{{selectedprofile.securitylink}}</a></p>
+        <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length == 0">Share with a link</button>
+        <button class="btn btn-default" ng-click="addSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Create new share link</button>
+        <button class="btn btn-default" ng-click="deleteSecurityLink(selectedprofile.globalid)" ng-show="selectedprofile.securitylink.length > 0">Delete share link</button>
+    </div>
+    <div>
+        <label for="txtFriendEmail">Allow a friend to see your diary</label>
+        <input type="text" ng-model="friendEmail" name="txtFriendEmail" id="Text1" />
+        <button class="btn btn-default" ng-click="addFriend(friendEmail, selectedprofile.globalid)">Add friend</button>
+    </div>
+</article>
+
