--- a/MySelf.WebClient/Views/Home/_Login.cshtml
+++ b/MySelf.WebClient/Views/Home/_Login.cshtml
@@ -22,7 +22,7 @@
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
             </li>
             <li>
-                <input type="submit" value="Log in" />
+                <input type="submit" value="Log in" class="btn btn-primary" />
             </li>
         </ol>
         @Html.ValidationSummary() 
