--- a/MySelf.WebClient/app/views/diary.view.html
+++ b/MySelf.WebClient/app/views/diary.view.html
@@ -2,7 +2,7 @@
     <header>
         <h2>{{profile.name}}</h2>
     </header>
-    <span ng-show="loading">loading</span>
+    <!--<span ng-show="loading">loading</span>-->
     <input type="hidden" id="link" ng-model="link" value="{{Link}}" />
     <div class="row graphpanel">
         <div class="col-xs-6 col-sm-4 col-lg-4">
