--- a/MySelf.WebClient/Views/Home/_Register.cshtml
+++ b/MySelf.WebClient/Views/Home/_Register.cshtml
@@ -19,8 +19,9 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
+            <br/>
             <li>
-                <input type="submit" value="Sign up" />
+                <input type="submit" value="Sign up" class="btn btn-primary" />
             </li>
         </ol>
         @Html.ValidationSummary()
